<resources>
    <string name="app_name">BirdCoop</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="traffic">Traffic</string>
    <string name="hours">Hours</string>
    <string name="location">Location</string>
    <string name="news">Latest News</string>
    <string name="contact_info">Contact Us</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_traffic">Traffic</string>
    <string name="title_activity_club_info">Club Info</string>
    <string name="title_activity_find_us">Find Us</string>
    <string name="title_activity_class_schedule">Class Schedule</string>
    <string name="title_activity_memberships">Memberships</string>
    <string name="title_activity_personal_training">Personal Training</string>
    <string name="workout_time_pref">When do you like to go?</string>
    <string name="early_morning">Early Morning/ 6:30am - 9am</string>
    <string name="mid_morning">Mid Morning/ 9am - 12pm</string>
    <string name="afternoon">Afternoon/ 12pm - 3pm</string>
    <string name="early_evening">Early Evening/ 3pm- 7pm</string>
    <string name="late_evening">Evening/ 7pm - 10pm</string>
    <string name="title_activity_settings">Settings</string>
    <string name="key_checkbox_preference">traffic_notifications</string>
    <string name="title_checkbox_preference">Traffic Notifications</string>
    <string name="default_checkbox_preference">true</string>
</resources>
