<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.birdcoop.TrafficFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:indeterminate="false"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:background="@drawable/circle_shape"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="100"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/progressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/progressUpdateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_time_pref"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@color/blue1"
        android:layout_marginBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"/>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/earlymorning">

        <RadioButton
        android:id="@+id/earlymorning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/early_morning"
        android:layout_marginBottom="10dp"/>

        <RadioButton
            android:id="@+id/midmorning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mid_morning"
            android:layout_marginBottom="10dp"/>

        <RadioButton
            android:id="@+id/afternoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/afternoon"
            android:layout_marginBottom="10dp"/>

        <RadioButton
            android:id="@+id/earlyevening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/early_evening"
            android:layout_marginBottom="10dp"/>

        <RadioButton
            android:id="@+id/lateevening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/late_evening"
            android:layout_marginBottom="10dp"/>

    </RadioGroup>

</LinearLayout>
